media query to fix height on iphone 5 safari

--- a/src/css/Hero.css
+++ b/src/css/Hero.css
@@ -8,6 +8,6 @@ section.hero {
 
 @media only screen and (max-width: 700px) {
   section.hero {
-    height: 75px;
+    height: 200px;
   }
 }
